Due to unknown reasons, Disk_Names() returns SCSI CDROM as a valid disk. This is main reason why sysinstall presents SCSI CDROM to available disks in Fdisk/Label menu. In addition, adding a blank SCSI CDROM to the menu generates floating point exception in sparc64. Disk_Names() just extracts sysctl "kern.disks". Why GEOM treats SCSI CDROM as a disk is beyond me and that should be investigated. For temporary workaround, ignore SCSI CDROM device.

PR:		sparc64/72962
Tested by:	R. Tyler Ballance < tyler AT tamu DOT edu>
MFC after:	1 week

Former-commit-id: 593e7cd89a0c768d80337ecd89bcadb0a9083d2a